feat: implement organ cost damage type and related mechanics